# Whisperm

./: .gitignore
client/: CMakeLists.txt  main.cpp  whisperm.h
client/assets/: cr.qrc
client/header/: Client.h  Kernel.h
client/header/tools/: Animation.h  AppLog.h  Async.h  Data.h  Enum.h  Media.h  Promise.h  Style.h  multiplatform.hpp
client/header/ui/: LoginDialog.h  MainWindow.h  MessageDialog.h  PageChats.h  PageContacts.h  PageSettings.h  Window.h
client/header/uicomponent/: Button.h  Chat.h  ChatBox.h  ChatListItem.h  ChatMessage.h  MainContainer.h  Panel.h  SystemTrayMenu.h  TitleBar.h
client/header/utils/: Animation.h  AppLog.h  AppSettings.h  BigInteger.h  Cryptology.h  Data.h  Enum.h  Multiplatform.hpp  Painter.h  Style.h  Task.h  multiplatform.hpp
client/source/: Client.cpp  Data.cpp  Kernel.cpp  Window.cpp
client/ui/: LoginDialog.cpp  LoginDialog.ui  MainWindow.cpp  MainWindow.ui  MessageDialog.cpp
client/ui/component/: Button.cpp  Chat.cpp  ChatBox.cpp  ChatListItem.cpp  ChatMessage.cpp  MainContainer.cpp  Panel.cpp  SystemTrayMenu.cpp  TitleBar.cpp
client/ui/page/: PageChats.cpp  PageChats.ui  PageContacts.cpp  PageContacts.ui  PageSettings.cpp  PageSettings.ui
client/utils/: Animation.cpp  AppLog.cpp  AppSettings.cpp  BigInteger.cpp  Cryptology.cpp  Enum.cpp  Media.cpp  Multiplatform.cpp  Painter.cpp  Promise.cpp  Style.cpp  multiplatform.cpp
doc/: UML.logic.drawio  plan.md
doc/protocolTemplates/: basic.json  messageforward.json  userlogin.json  userlogout.json
server.NET/: Program.cs  Whisperm.server.sln  server.csproj
server.NET/database/: ini.mysql.sql
server.NET/src/: Client.cs  Messager.cs  Server.cs
server.NET/src/Data/: Client.cs  Message.cs  User.cs
server.NET/src/utils/: Database.cs  Log.cs  MessageAnalyzer.cs
server.node/: README_SERVER.md  UsersTable.sql  package-lock.json  package.json  tsconfig.json
server.node/src/: client.ts  main.ts  server.ts  sys.ts
